Poms' cleansing across all projects (common / standard structure, artifacts & versions updates, special profiles for c++ & c#, integration tests successful on bugs/examples/grammars)
Signed-off-by: mmazas <mmazas@ITEM-S104678.emea.msad.sopra>