@@ -35,17 +35,64 @@ THE POSSIBILITY OF SUCH DAMAGE.
 
   <groupId>org</groupId>
   <artifactId>javacc</artifactId>
+  <version>8.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <version>8.0.7</version>
 
   <name>JavaCC</name>
-  <description>JavaCC is a core/scanner generator for java.</description>
+  <description>Parent module of JavaCC, a core/scanner generator for different languages</description>
   <url>https://github.com/javacc/javacc-8</url>
   <inceptionYear>1996</inceptionYear>
+
   <organization>
     <name>javacc.org</name>
     <url>https://javacc.github.io/javacc/</url>
   </organization>
+
+  <properties>
+
+    <javacc.core.version>8.1.0-SNAPSHOT</javacc.core.version>
+    <javacc.java.version>8.1.0-SNAPSHOT</javacc.java.version>
+    <javacc.cpp.version>8.1.0-SNAPSHOT</javacc.cpp.version>
+    <javacc.csharp.version>8.1.0-SNAPSHOT</javacc.csharp.version>
+    <javacc.js.version>8.1.0-SNAPSHOT</javacc.js.version>
+
+    <javacc-maven-plugin.version>3.0.3</javacc-maven-plugin.version>
+    <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
+    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <plexus-compiler-csharp.version>2.15.0</plexus-compiler-csharp.version>
+    <maven-invoker-plugin.version>3.7.0</maven-invoker-plugin.version>
+
+    <!--    <root>${basedir}</root>-->
+
+    <javadoc.doclint>none</javadoc.doclint>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <toolchain.jdk.version>[11,)</toolchain.jdk.version>
+    <maven.compiler.release>11</maven.compiler.release>
+    <!--    <toolchain.jdk.version>8</toolchain.jdk.version>-->
+    <!--    <maven.compiler.source>1.8</maven.compiler.source>-->
+    <!--    <maven.compiler.target>1.8</maven.compiler.target>-->
+
+    <skipTests>false</skipTests>
+
+    <keystore.path>keystore</keystore.path>
+    <keystore.type>PKCS12</keystore.type>
+    <keystore.alias>release</keystore.alias>
+    <keystore.password>javacc</keystore.password>
+    <keystore.store.password>javacc</keystore.store.password>
+    <keystore.key.password>javacc</keystore.key.password>
+    <tsaUrl>https://freetsa.org/tsr</tsaUrl>
+
+  </properties>
+
+  <modules>
+    <module>../javacc-8-core</module>
+    <module>../javacc-8-java</module>
+    <module>../javacc-8-cpp</module>
+    <module>../javacc-8-csharp</module>
+    <module>../javacc-8-js</module>
+  </modules>
 
   <scm>
     <url>https://github.com/javacc/javacc-8</url>
@@ -193,6 +240,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
   </licenses>
 
   <profiles>
+
     <profile>
       <id>release</id>
       <build>
@@ -205,7 +253,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
             </plugin>
             <plugin>
               <artifactId>maven-javadoc-plugin</artifactId>
-              <version>3.1.1</version>
+              <version>3.7.0</version>
             </plugin>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
@@ -225,7 +273,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
             <plugin>
               <groupId>org.javacc.plugin</groupId>
               <artifactId>javacc-maven-plugin</artifactId>
-              <version>3.0.3</version>
+              <version>${javacc-maven-plugin.version}</version>
             </plugin>
           </plugins>
         </pluginManagement>
@@ -254,7 +302,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
                   <goal>jar</goal>
                 </goals>
                 <configuration>
-                  <doclint>none</doclint>
+                  <doclint>${javadoc.doclint}</doclint>
                 </configuration>
               </execution>
             </executions>
@@ -309,7 +357,9 @@ THE POSSIBILITY OF SUCH DAMAGE.
         </plugins>
       </build>
     </profile>
+
   </profiles>
+
   <pluginRepositories>
     <pluginRepository>
       <id>ossrh</id>
@@ -324,43 +374,24 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </pluginRepository>
   </pluginRepositories>
 
-  <properties>
-    <doclint>none</doclint>
-<!--    <project.build.sourceEncoding>ISO-8859-15</project.build.sourceEncoding>-->
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-<!--    <maven.compiler.source>1.8</maven.compiler.source>-->
-    <maven.compiler.source>11</maven.compiler.source>
-<!--    <maven.compiler.target>1.8</maven.compiler.target>-->
-    <maven.compiler.target>11</maven.compiler.target>
-
-    <skipTests>false</skipTests>
-
-    <keystore.path>keystore</keystore.path>
-    <keystore.type>PKCS12</keystore.type>
-    <keystore.alias>release</keystore.alias>
-    <keystore.password>javacc</keystore.password>
-    <keystore.store.password>javacc</keystore.store.password>
-    <keystore.key.password>javacc</keystore.key.password>
-    <tsaUrl>https://freetsa.org/tsr</tsaUrl>
-
-    <root>${basedir}</root>
-    <javacc.core>8.0.2</javacc.core>
-  </properties>
-
   <dependencyManagement>
     <dependencies>
+
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
       </dependency>
+
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
         <version>1.9.5</version>
       </dependency>
+
     </dependencies>
   </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -369,120 +400,177 @@ THE POSSIBILITY OF SUCH DAMAGE.
     </dependency>
   </dependencies>
 
-  <!-- ModMMa 2024/7/15  -->
-  <modules>
-    <module>../javacc-8-core</module>
-    <module>../javacc-8-java</module>
-    <module>../javacc-8-cpp</module>
-    <module>../javacc-8-csharp</module>
-    <module>../javacc-8-js</module>
-    <!--
-    <module>core</module>
-    <module>codegen</module>
--->
-  </modules>
-
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
+          <!-- copies the project artifacts to the user's local repository; usually implicit -->
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-invoker-plugin</artifactId>
-          <version>3.2.1</version>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>3.1.2</version>
         </plugin>
         <plugin>
+          <!--  handles the copying of project (source & test) resources to the output directory;
+                usually implicit -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.3.1</version>
+        </plugin>
+        <plugin>
+          <!-- allows to share configuration (here jdk) across plugins;
+               reads <userhome>/.m2/toolchains.xml -->
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-toolchains-plugin</artifactId>
+          <version>3.2.0</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-invoker-plugin</artifactId>
+          <version>${maven-invoker-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-pmd-plugin</artifactId>
           <version>3.12.0</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-report-plugin</artifactId>
           <version>3.0.0-M4</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.8.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M4</version>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>3.1.2</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
-          <version>1.8</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>1.6.0</version>
+          <version>${exec-maven-plugin.version}</version>
         </plugin>
-        <plugin>
+        <!--        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
           <version>2.7</version>
         </plugin>
+-->
         <plugin>
           <groupId>com.github.maven-nar</groupId>
           <artifactId>nar-maven-plugin</artifactId>
           <version>3.10.1</version>
+          <!-- snapshot not published on sonatype snapshot repo!-->
           <!--          <version>3.10.2-SNAPSHOT</version>-->
         </plugin>
         <plugin>
           <groupId>org.javacc.plugin</groupId>
           <artifactId>javacc-maven-plugin</artifactId>
-          <version>3.0.3</version>
+          <version>${javacc-maven-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>3.13.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.4.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
+
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <!-- 
-					<archive>
-						<index>true</index>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<addDefaultEntries>true</addDefaultEntries>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-							<classpathLayoutType>repository</classpathLayoutType>
-							<classpathPrefix>repository</classpathPrefix>
-							<mainClass>javacc</mainClass>
-						</manifest>
-						<manifestEntries>
-							<url>${project.url}</url>
-						</manifestEntries>
-					</archive>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <addDefaultEntries>true</addDefaultEntries>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              <classpathLayoutType>repository</classpathLayoutType>
+              <classpathPrefix>repository</classpathPrefix>
+              <mainClass>javacc</mainClass>
+            </manifest>
+            <manifestEntries>
+              <url>${project.url}</url>
+            </manifestEntries>
+          </archive>
  -->
         </configuration>
       </plugin>
+
+      <plugin>
+        <!-- allows to share configuration (here jdk) across plugins -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-toolchains-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>validate-tc</id>
+            <goals>
+              <goal>toolchain</goal>
+              <!--              <goal>select-jdk-toolchain</goal>-->
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <toolchains>
+            <jdk>
+              <version>11</version>
+            </jdk>
+          </toolchains>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-invoker-plugin</artifactId>
+        <!-- install conf: see
+        https://maven.apache.org/plugins/maven-invoker-plugin/install-mojo.html-->
+        <!-- run conf: see
+        https://maven.apache.org/plugins/maven-invoker-plugin/run-mojo.html#invokerPropertiesFile-->
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+      </plugin>
+
       <plugin>
         <groupId>com.github.maven-nar</groupId>
         <artifactId>nar-maven-plugin</artifactId>
@@ -494,18 +582,20 @@ THE POSSIBILITY OF SUCH DAMAGE.
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <forkMode>once</forkMode>
           <includes>
             <include>**/*Test.java</include>
           </includes>
-          <excludes> </excludes>
+          <excludes></excludes>
+          <argLine>--illegal-access=permit</argLine>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -516,11 +606,13 @@ THE POSSIBILITY OF SUCH DAMAGE.
           <goals>deploy</goals>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 
   <reporting>
     <plugins>
+
       <plugin>
         <groupId>org.javacc.plugin</groupId>
         <artifactId>javacc-maven-plugin</artifactId>
@@ -580,11 +672,6 @@ THE POSSIBILITY OF SUCH DAMAGE.
       </plugin>
 
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-      </plugin>
-
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
       </plugin>
@@ -597,6 +684,7 @@ THE POSSIBILITY OF SUCH DAMAGE.
           <locales>en</locales>
         </configuration>
       </plugin>
+
     </plugins>
   </reporting>
 </project>
